Updated DIContainer for java9 compliance